--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,9 +18,9 @@
 
 // MAIN INDEX
 .content {
-    background-image: url(/img/fotoHeader.jpg);
+    background-image: url(../img/fotoHeader.jpg);
     height: 100vh;
-    // background-size: cover;
+    background-size: cover;
 
     .textoHeaderInicio {
         position: absolute;
