--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -14,7 +14,7 @@
       font-family: bodoni;
       src: url(../font/bodoni-bd-bt/BodonBd.ttf);
   }
-.divHead {
+.divHeader {
     position:absolute;
     display: flex;
     flex-direction: row;
