--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,6 @@
 // INDEX HEADER
 @import "header";
 
-
-
 @font-face {
     font-family: R regular;
     src: url(../font/Raleway-Regular.ttf);
@@ -22,7 +20,7 @@
 
 
 // DIV CON CLASS CONTENT DEL MAIN DE TODAS LAS PAGES.
-.mainIndex{
+.main{
     .container1{
         .container1__texto{
             // background-color: black;
