--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    // align-content: center;
+    align-items: center;
     position:absolute;
     height: 10vh;
     width: 100vw;
@@ -34,11 +34,13 @@
       margin-left: 20px;
       }
 
+      
+
       .nav__list{
         list-style: none;
         display: flex;
         flex-direction: row;
-        width: 700px;
+        width: 600px;
         padding: 0%;
         justify-content: space-between;
         // align-items: center;
@@ -51,7 +53,6 @@
           font-style: normal;
           font-weight: 600;
           font-size: 12px;
-          line-height: 38px;
           letter-spacing: 0.1em;
           font-variant: small-caps;
           text-shadow: 5px 4px 4px rgba(0, 0, 0, 0.9); 
@@ -59,18 +60,66 @@
       }
 
    #header__button {
-    height: 50px;
+    height: 45px;
     margin-right: 20px;
-
     color: #FBF8F8;
     font-family: R regular;
-    font-style: normal;
-    font-weight: 600;
     font-size: 15px;
-    line-height: 38px;
     letter-spacing: 0.1em;
     font-variant: small-caps;
     text-shadow: 5px 4px 4px rgba(0, 0, 0, 0.9); 
 
    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    .header {
+        .nav__list{
+          width: 450px;
+        }
+    }
+  }
+
+  @media screen and (max-width: 920px) {
+    .header {
+        .nav__list{
+          width: 400px;
+        }
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .header {
+      .header__logo{
+          height: 40px; 
+      }
+  
+      .nav__list{
+          flex-direction: column;
+          width:fit-content;
+          align-items: center;
+          
+          .nav__list-link{
+            font-size: 10px;
+          }
+        }
+  
+        #header__button {
+          height: 30px;
+          font-size: 12px;
+          line-height:normal;
+         }
+    }
+  }
+
+  @media screen and (max-width: 480px) {
+    .header {
+      .header__logo{
+        height: 30px; 
+      }
+  
+      .nav__list-link{
+        font-size: 10px;
+      }
+    }
   }
