--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,9 @@
 * {
   box-sizing: border-box; }
 
+img {
+  max-width: 100%; }
+
 .header {
   display: flex;
   flex-direction: row;
@@ -28,27 +31,25 @@
   margin-top: 20px; }
   .header .header__logo {
     height: 50px;
-    margin-left: 20px; }
+    margin-left: 30px; }
   .header .nav__list {
     list-style: none;
     display: flex;
     flex-direction: row;
-    width: 600px;
+    width: 500px;
     padding: 0%;
     justify-content: space-between; }
     .header .nav__list .nav__list-link {
       color: #FBF8F8;
       text-decoration: none;
       font-family: R regular;
-      font-style: normal;
-      font-weight: 600;
       font-size: 12px;
       letter-spacing: 0.1em;
       font-variant: small-caps;
       text-shadow: 5px 4px 4px rgba(0, 0, 0, 0.9); }
   .header #header__button {
     height: 45px;
-    margin-right: 20px;
+    margin-right: 30px;
     color: #FBF8F8;
     font-family: R regular;
     font-size: 15px;
@@ -62,21 +63,33 @@
 
 @media screen and (max-width: 920px) {
   .header .nav__list {
-    width: 400px; } }
+    width: 350px; } }
+
+@media screen and (min-width: 768px) {
+  .toggle-menu {
+    display: none; } }
 
 @media screen and (max-width: 768px) {
   .header .header__logo {
-    height: 40px; }
+    height: 40px;
+    margin: 20px; }
+  .header .toggle-menu {
+    width: 40px;
+    filter: invert(1);
+    cursor: pointer; }
   .header .nav__list {
+    margin-top: 30px;
+    margin-right: 20px;
     flex-direction: column;
     width: fit-content;
-    align-items: center; }
-    .header .nav__list .nav__list-link {
-      font-size: 10px; }
+    align-items: center;
+    transition: transform 0.3s;
+    transform: translateY(-110%);
+    /*esto hace desaparecer el menu y que solo se vea el menu hamburguesa*/ }
+  .header .main-menu--show {
+    transform: translateY(0); }
   .header #header__button {
-    height: 30px;
-    font-size: 12px;
-    line-height: normal; } }
+    display: none; } }
 
 @media screen and (max-width: 480px) {
   .header .header__logo {
