--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,125 +1,152 @@
 @font-face {
-    font-family: R regular;
-    src: url(../font/Raleway-Regular.ttf);
-  }
+  font-family: R regular;
+  src: url(../font/Raleway-Regular.ttf);
+}
 @font-face {
-    font-family: R extrabold;
-    src: url(../font/Raleway-ExtraBold.ttf);
-    }
-    @font-face {
-        font-family: R thin;
-        src: url(../font/Raleway-Thin.ttf);
-        }
-@font-face {
-      font-family: bodoni;
-      src: url(../font/bodoni-bd-bt/BodonBd.ttf);
+  font-family: R extrabold;
+  src: url(../font/Raleway-ExtraBold.ttf);
   }
-
-*{
-  box-sizing: border-box;
+  @font-face {
+      font-family: R thin;
+      src: url(../font/Raleway-Thin.ttf);
+      }
+@font-face {
+    font-family: bodoni;
+    src: url(../font/bodoni-bd-bt/BodonBd.ttf);
 }
 
-  .header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    position:absolute;
-    height: 10vh;
-    width: 100vw;
-    margin-top: 20px;
+*{
+box-sizing: border-box;
+}
 
-      .header__logo{
-      height: 50px;
-      margin-left: 20px;
+img{
+max-width: 100%;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position:absolute;
+  height: 10vh;
+  width: 100vw;
+  margin-top: 20px;
+
+    .header__logo{
+    height: 50px;
+    margin-left: 30px;
+    }
+
+    // .menuText{
+    //   width: fit-content;
+    //   color: #FBF8F8;
+    //   font-family: R regular;
+    //   font-size: 17px;
+    //   letter-spacing: 0.1em;
+    //   font-variant: small-caps;
+    //   text-shadow: 5px 4px 4px rgba(0, 0, 0, 0.9); 
+    // }
+
+    
+
+    .nav__list{
+      list-style: none;
+      display: flex;
+      flex-direction: row;
+      width: 500px;
+      padding: 0%;
+      justify-content: space-between;
+
+      .nav__list-link{
+        color: #FBF8F8;
+        text-decoration: none;
+        font-family: R regular;
+        font-size: 12px;
+        letter-spacing: 0.1em;
+        font-variant: small-caps;
+        text-shadow: 5px 4px 4px rgba(0, 0, 0, 0.9); 
       }
+    }
 
-      
-
-      .nav__list{
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-        width: 600px;
-        padding: 0%;
-        justify-content: space-between;
-        // align-items: center;
-
-        .nav__list-link{
-          
-          color: #FBF8F8;
-          text-decoration: none;
-          font-family: R regular;
-          font-style: normal;
-          font-weight: 600;
-          font-size: 12px;
-          letter-spacing: 0.1em;
-          font-variant: small-caps;
-          text-shadow: 5px 4px 4px rgba(0, 0, 0, 0.9); 
-        }
-      }
-
-   #header__button {
+  #header__button {
     height: 45px;
-    margin-right: 20px;
+    margin-right: 30px;
     color: #FBF8F8;
     font-family: R regular;
     font-size: 15px;
     letter-spacing: 0.1em;
     font-variant: small-caps;
     text-shadow: 5px 4px 4px rgba(0, 0, 0, 0.9); 
-
-   }
   }
+}
 
-  @media screen and (max-width: 1024px) {
-    .header {
-        .nav__list{
-          width: 450px;
-        }
-    }
-  }
-
-  @media screen and (max-width: 920px) {
-    .header {
-        .nav__list{
-          width: 400px;
-        }
-    }
-  }
-
-  @media screen and (max-width: 768px) {
-    .header {
-      .header__logo{
-          height: 40px; 
-      }
-  
+@media screen and (max-width: 1024px) {
+  .header {
       .nav__list{
-          flex-direction: column;
-          width:fit-content;
-          align-items: center;
-          
-          .nav__list-link{
-            font-size: 10px;
-          }
-        }
-  
-        #header__button {
-          height: 30px;
-          font-size: 12px;
-          line-height:normal;
-         }
-    }
+        width: 450px;
+      }
   }
+}
 
-  @media screen and (max-width: 480px) {
-    .header {
-      .header__logo{
-        height: 30px; 
+@media screen and (max-width: 920px) {
+  .header {
+      .nav__list{
+        width: 350px;
       }
-  
-      .nav__list-link{
-        font-size: 10px;
+  }
+}
+
+@media screen and (min-width: 768px){
+  .toggle-menu { 
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    .header__logo{
+        height: 40px;
+        margin: 20px;
+    }
+
+    .toggle-menu {
+      width: 40px;
+      filter: invert(1);
+      cursor: pointer;
+    }
+
+    .nav__list{
+        margin-top: 30px;
+        margin-right: 20px;
+        flex-direction: column;
+        width:fit-content;
+        align-items: center;
+        transition: transform 0.3s;
+        transform: translateY(-110%);/*esto hace desaparecer el menu y que solo se vea el menu hamburguesa*/
       }
+
+      .main-menu--show{
+          transform: translateY(0);
+      }
+
+      #header__button {
+        // en donde pongo el boton cuando se ve desde el celukar???? URG
+          display: none;
+      //   height: 35px;
+      //   font-size: 13px;
+       }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .header {
+    .header__logo{
+      height: 30px;
+    }
+
+    .nav__list-link{
+      font-size: 10px;
     }
   }
+}
