--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,5 @@
 // INDEX HEADER
 @import "header";
-// @import "nav";
 
 @font-face {
     font-family: R regular;
@@ -18,16 +17,16 @@
   *{
       box-sizing: border-box;
   }
-
-
-// DIV CON CLASS CONTENT DEL MAIN DE TODAS LAS PAGES.
+// DIV CONTAINER1 DEL MAIN DE TODAS LAS PAGES.
 .main{
     .container1{
+        height: 100vh;
+        width: 100vw;
+        background-size: cover;
         .container1__texto{
-            // background-color: black;
             width:fit-content;
             position: relative;
-            top: 500px; /*(para que se aplique tiene que estar posicionado SI o SI, sino no funciona*/
+            top:500px; /*(para que se aplique tiene que estar posicionado SI o SI, sino no funciona*/
             margin-left: auto;
             padding-right: 20px;
             font-family: R extrabold;
@@ -43,31 +42,79 @@
 
 // IMAGEN DE FONDE DE CADA PAGE.
 // INDEX.
-.container1{
+#contentIndex{
     background-image: url(../img/index.jpg);
-    height: 100vh;
-    width: 100vw;
-    background-size: cover;
 }
 
 //CONOCENOS.
 #contentConocenos{
     background-image: url(../img/quienesSomos.jpg);
-    height: 100vh;
-    background-size: cover;
+
 }
 
 //CAMPANIAS.
 #contentCampanias{
     background-image: url(../img/campanias.jpg);
-    height: 100vh;
-    background-size: cover;
-}
 
+}
 
 //CONTACTO.
 #contentContacto{
     background-image: url(../img/contacto.jpg);
-    height: 100vh;
-    background-size: cover;
+
+}
+
+@media screen and (max-width: 1024px) {
+    .main{
+        .container1{
+            .container1__texto{
+                top: 400px;
+
+            }
+        }
+    }
+  }
+
+@media screen and (max-width: 920px ) {
+    .main{
+        .container1{
+            height: 60vh;
+
+            .container1__texto{
+                font-size: 60px;
+                line-height: 60px;
+                top: 250px;
+
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .main{
+        .container1{
+            height: 50vh;
+
+            .container1__texto{
+                font-size: 50px;
+                line-height: 50px;
+                top: 200px;
+
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 480px ) {
+    .main{
+        .container1{
+            height: 40vh;
+            .container1__texto{
+                font-size: 30px;
+                line-height: 30px;
+                top: 200px;
+
+            }
+        }
+    }
 }
