agregue SEO, optimización de imagenes de fondo, lang:es

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,24 +43,24 @@
 // IMAGEN DE FONDE DE CADA PAGE.
 // INDEX.
 #contentIndex{
-    background-image: url(../img/index.jpg);
+    background-image: url(../img/tinified/index.jpg);
 }
 
 //CONOCENOS.
 #contentConocenos{
-    background-image: url(../img/quienesSomos.jpg);
+    background-image: url(../img/tinified/quienesSomos.jpg);
 
 }
 
 //CAMPANIAS.
 #contentCampanias{
-    background-image: url(../img/campanias.jpg);
+    background-image: url(../img/tinified/campanias.jpg);
 
 }
 
 //CONTACTO.
 #contentContacto{
-    background-image: url(../img/contacto.jpg);
+    background-image: url(../img/tinified/contacto.jpg);
 
 }
 
