--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -16,7 +16,9 @@
 }
 
 *{
-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0%;
+  margin: 0%;
 }
 
 img{
@@ -42,6 +44,7 @@ max-width: 100%;
       list-style: none;
       display: flex;
       flex-direction: row;
+      // display: inline-block;
       width: 500px;
       padding: 0%;
       justify-content: space-between;
@@ -60,12 +63,17 @@ max-width: 100%;
   #header__button {
     height: 45px;
     margin-right: 30px;
-    color: #FBF8F8;
     font-family: R regular;
     font-size: 15px;
     letter-spacing: 0.1em;
     font-variant: small-caps;
     text-shadow: 5px 4px 4px rgba(0, 0, 0, 0.9); 
+
+    a {
+      text-decoration: none;
+      color: #FBF8F8;
+
+    }
   }
 }
 
