--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 // INDEX HEADER
 @import "header";
+@import "footer";
 
 @font-face {
     font-family: R regular;
@@ -16,6 +17,8 @@
 
   *{
       box-sizing: border-box;
+      padding: 0;
+      margin: 0;
   }
 // DIV CONTAINER1 DEL MAIN DE TODAS LAS PAGES.
 .main{
@@ -23,6 +26,7 @@
         height: 100vh;
         width: 100vw;
         background-size: cover;
+
         .container1__texto{
             width:fit-content;
             position: relative;
@@ -64,6 +68,413 @@
 
 }
 
+// MAIN - INDEX
+
+.cards__section {
+
+    display: flex;
+    text-align: center;
+
+}
+
+.cards__titulo {
+    font-size: 20px;
+    color: #2ecc71;
+    text-decoration: none;
+    font-family: R regular;
+}
+
+p {
+    font-family: R regular;
+}
+
+// VIDEO 
+
+.bannerVideo {
+    font-family: R regular;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    video {
+        position: absolute;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+    }
+
+    .contenidovideo {
+        position: relative;
+        z-index: 1;
+        max-width: 1000px;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    h1 {
+        margin: 0;
+        padding: 0;
+        text-transform: uppercase;
+        color: #2ecc71;
+        font-family: R extrabold;
+        font-weight: 800;
+        font-size: 70px;
+        line-height: 70px;
+
+        text-shadow: 5px 4px 4px rgba(0, 0, 0, 0.9);
+    }
+
+    p {
+        font-size: 2em;
+        color: #0066b2;
+        font-family: R extrabold;
+            font-weight: 800;
+            font-size: 70px;
+            line-height: 70px;
+
+            text-shadow: 5px 4px 4px rgba(0, 0, 0, 0.9);
+    }
+
+    .buttonvideo {
+        padding: 1.3em 3em;
+        font-size: 12px;
+        text-transform: uppercase;
+        letter-spacing: 2.5px;
+        font-weight: 500;
+        color: #000;
+        background-color: #fff;
+        border: none;
+        border-radius: 45px;
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+        transition: all 0.3s ease 0s;
+        cursor: pointer;
+        outline: none;
+      }
+      
+      .buttonvideo:hover {
+        background-color: #23c483;
+        box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+        color: #fff;
+        transform: translateY(-7px);
+      }
+      
+      .buttonvideo:active {
+        transform: translateY(-1px);
+      }
+      a{
+        text-decoration: none;
+      }
+}
+
+// MAIN - CONOCENOS
+.conocenos__seccion1 {
+    h3{
+        color: #2ecc71;
+    }
+    display: flex;
+    flex-direction: row;
+    font-family: R regular;
+}
+
+.conocenos__seccion2 {
+    h3{
+        color: #2ecc71;
+    }
+    display: flex;
+    flex-direction: row;
+    font-family: R regular;
+    background: #0066b2;
+    p{
+        color: white;
+    }
+}
+
+.conocenos__seccion3 {
+    h3{
+        color: #2ecc71;
+    }
+    display: flex;
+    flex-direction: row;
+    font-family: R regular;
+}
+
+
+.conocenos__img {
+    width: 40%;
+    height: auto;
+}
+
+
+
+// MAIN CAMPANIAS
+
+
+.campanias__descripcion1 {
+    h3{
+        color: #2ecc71;
+    }
+    display: flex;
+    flex-direction: row;
+    font-family: R regular;
+}
+
+.campanias__descripcion2 
+{
+    h3{
+        color: #2ecc71;
+    }
+    display: flex;
+    flex-direction: row;
+    font-family: R regular;
+    background: #0066b2;
+    p{
+        color: white;
+    }
+}
+
+
+@mixin aspect-ratio($width, $height) {
+    position: relative;
+      
+    &:before {
+      display: block;
+      content: "";
+      width: 100%;
+      padding-top: ($height / $width) * 100%;
+    }
+      
+    > img {
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          width: 100%;
+          height: 100%;
+    }
+  }
+  
+  // Styling
+  
+  section {
+      background: #F4F4F4;
+      padding: 50px 0;
+  }
+  
+  .container {
+      max-width: 1044px;
+      margin: 0 auto;
+      padding: 0 20px;
+  }
+  
+  .carousel {
+      display: block;
+      text-align: left;
+      position: relative;
+      margin-bottom: 22px;
+      
+      > input {
+          clip: rect(1px, 1px, 1px, 1px);
+          clip-path: inset(50%);
+          height: 1px;
+          width: 1px;
+          margin: -1px;
+          overflow: hidden;
+          padding: 0;
+          position: absolute;
+          
+          &:nth-of-type(6):checked ~ .carousel__slides .carousel__slide:first-of-type { margin-left: -500%; }
+          &:nth-of-type(5):checked ~ .carousel__slides .carousel__slide:first-of-type { margin-left: -400%; }
+          &:nth-of-type(4):checked ~ .carousel__slides .carousel__slide:first-of-type { margin-left: -300%; }
+          &:nth-of-type(3):checked ~ .carousel__slides .carousel__slide:first-of-type { margin-left: -200%; }
+          &:nth-of-type(2):checked ~ .carousel__slides .carousel__slide:first-of-type { margin-left: -100%; }
+          &:nth-of-type(1):checked ~ .carousel__slides .carousel__slide:first-of-type { margin-left: 0%; }
+          
+          &:nth-of-type(1):checked ~ .carousel__thumbnails li:nth-of-type(1) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+          &:nth-of-type(2):checked ~ .carousel__thumbnails li:nth-of-type(2) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+          &:nth-of-type(3):checked ~ .carousel__thumbnails li:nth-of-type(3) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+          &:nth-of-type(4):checked ~ .carousel__thumbnails li:nth-of-type(4) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+          &:nth-of-type(5):checked ~ .carousel__thumbnails li:nth-of-type(5) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+          &:nth-of-type(6):checked ~ .carousel__thumbnails li:nth-of-type(6) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+      }
+  }
+  
+  .carousel__slides {
+      position: relative;
+      z-index: 1;
+      padding: 0;
+      margin: 0;
+      overflow: hidden;
+      white-space: nowrap;
+      box-sizing: border-box;
+      display: flex;
+  }
+  
+  .carousel__slide {
+      position: relative;
+      display: block;
+      flex: 1 0 100%;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      transition: all 300ms ease-out;
+      vertical-align: top;
+      box-sizing: border-box;
+      white-space: normal;
+      
+      figure {
+          display: flex;
+          margin: 0;
+      }
+      
+      div {
+          @include aspect-ratio(3, 2);
+          width: 100%;
+      }
+      
+      img {
+          display: block;
+          flex: 1 1 auto;
+          object-fit: cover;
+      }
+      
+      figcaption {
+          align-self: flex-end;
+          padding: 20px 20px 0 20px;
+          flex: 0 0 auto;
+          width: 25%;
+          min-width: 150px;
+      }
+      
+      .credit {
+          margin-top: 1rem;
+          color: rgba(0, 0, 0, 0.5);
+          display: block;        
+      }
+      
+      &.scrollable {
+          overflow-y: scroll;
+      }
+  }
+  
+  .carousel__thumbnails {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      
+      margin: 0 -10px;
+      
+      .carousel__slides + & {
+          margin-top: 20px;
+      }
+      
+      li {        
+          flex: 1 1 auto;
+          max-width: calc((100% / 6) - 20px);  
+          margin: 0 10px;
+          transition: all 300ms ease-in-out;
+      }
+      
+      label {
+          display: block;
+          @include aspect-ratio(1,1);
+          
+                    
+          &:hover,
+          &:focus {
+              cursor: pointer;
+              
+              img {
+                  box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.25);
+                  transition: all 300ms ease-in-out;
+              }
+          }
+      }
+      
+      img {
+          display: block;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+      }
+  }
+
+
+
+
+
+
+// MAIN CONTACTOS
+.contacto__seccion {
+    display: flex;
+    flex-direction: row;
+    border-radius: 30px;
+    a {
+        text-decoration: none;
+        color: #2ecc71;
+    }
+}
+
+h3 {
+    color: #2ecc71;
+}
+
+.seccion__info {
+    list-style: none;
+}
+
+.seccion__buttonlist {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.donatebutton {
+    padding: 15px 25px;
+    border: unset;
+    border-radius: 15px;
+    color: #212121;
+    z-index: 1;
+    background: #e8e8e8;
+    position: relative;
+    font-weight: 1000;
+    font-size: 17px;
+    -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+    box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+    transition: all 250ms;
+    overflow: hidden;
+   }
+   
+   .donatebutton::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    border-radius: 15px;
+    background-color: #212121;
+    z-index: -1;
+    -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+    box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+    transition: all 250ms
+   }
+   
+   .donatebutton:hover {
+    color: #e8e8e8;
+   }
+   
+   .donatebutton:hover::before {
+    width: 100%;
+   }
+
+
+
 @media screen and (max-width: 1024px) {
     .main{
         .container1{
@@ -99,8 +510,43 @@
                 font-size: 50px;
                 line-height: 50px;
                 top: 200px;
-
             }
+        }
+        // CONOCENOS
+        .conocenos__seccion1{
+            flex-direction: column;
+        }
+        .conocenos__seccion2{
+            flex-direction: column;
+        }
+        .conocenos__seccion3{
+            flex-direction: column;
+        }
+        
+        .conocenos__img {
+            width: 100%;
+        }
+
+        // CAMPANIAS
+        .campanias__descripcion1{
+            flex-direction: column;
+        }
+        .campanias__descripcion2{
+            flex-direction: column;
+        }
+    
+        
+        .conocenos__img {
+            width: 100%;
+        }
+
+
+        // CONTACTO
+        .contacto__seccion {
+            flex-direction: column;
+        }
+        .seccion__buttonlist {
+            flex-direction: column;
         }
     }
 }
@@ -115,6 +561,39 @@
                 top: 200px;
 
             }
+        }
+        .conocenos__seccion1{
+            flex-direction: column;
+        }
+        .conocenos__seccion2{
+            flex-direction: column;
+        }
+        .conocenos__seccion3{
+            flex-direction: column;
+        }
+    
+        .conocenos__img {
+            width: 100%; }
+
+
+        // CAMPANIAS
+        .campanias__descripcion1{
+            flex-direction: column;
+        }
+        .campanias__descripcion2{
+            flex-direction: column;
+        }
+    
+    
+        .conocenos__img {
+            width: 100%; }
+
+        //CONTACTO 
+        .contacto__seccion {
+            flex-direction: column;
+        }
+        .seccion__buttonlist {
+            flex-direction: column;
         }
     }
 }
